crates/tautcore-layout/tests/snapshots/hierarchical_coordinates__fanout_port_anchor_coordinates.snap
---
source: crates/tautcore-layout/tests/hierarchical_coordinates.rs
expression: "layout_json(graph, Size::new(120.0, 40.0))"
---
{
  "edges": [
    {
      "from_port": {
        "along": {
          "LocalOffset": {
            "x": 20.0,
            "y": 40.0
          }
        },
        "side": "south"
      },
      "id": "e0",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 164.0,
              "y": 40.0
            },
            {
              "x": 164.0,
              "y": 60.0
            },
            {
              "x": 60.0,
              "y": 60.0
            },
            {
              "x": 60.0,
              "y": 80.0
            }
          ]
        }
      },
      "source": "src",
      "target": "t0",
      "to_port": {
        "along": {
          "LocalOffset": {
            "x": 60.0,
            "y": 0.0
          }
        },
        "side": "north"
      }
    },
    {
      "from_port": {
        "along": {
          "LocalOffset": {
            "x": 60.0,
            "y": 40.0
          }
        },
        "side": "south"
      },
      "id": "e1",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 204.0,
              "y": 40.0
            },
            {
              "x": 204.0,
              "y": 160.0
            }
          ]
        }
      },
      "source": "src",
      "target": "t1",
      "to_port": {
        "along": {
          "LocalOffset": {
            "x": 60.0,
            "y": 0.0
          }
        },
        "side": "north"
      }
    },
    {
      "from_port": {
        "along": {
          "LocalOffset": {
            "x": 100.0,
            "y": 40.0
          }
        },
        "side": "south"
      },
      "id": "e2",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 244.0,
              "y": 40.0
            },
            {
              "x": 244.0,
              "y": 60.0
            },
            {
              "x": 348.0,
              "y": 60.0
            },
            {
              "x": 348.0,
              "y": 80.0
            }
          ]
        }
      },
      "source": "src",
      "target": "t2",
      "to_port": {
        "along": {
          "LocalOffset": {
            "x": 60.0,
            "y": 0.0
          }
        },
        "side": "north"
      }
    },
    {
      "from_port": {
        "along": {
          "LocalOffset": {
            "x": 60.0,
            "y": 40.0
          }
        },
        "side": "south"
      },
      "id": "e3",
      "path": {
        "polyline": {
          "points": [
            {
              "x": 60.0,
              "y": 120.0
            },
            {
              "x": 60.0,
              "y": 140.0
            },
            {
              "x": 174.0,
              "y": 140.0
            },
            {
              "x": 174.0,
              "y": 160.0
            }
          ]
        }
      },
      "source": "t0",
      "target": "t1",
      "to_port": {
        "along": {
          "LocalOffset": {
            "x": 30.0,
            "y": 0.0
          }
        },
        "side": "north"
      }
    }
  ],
  "nodes": [
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 144.0,
        "y": 0.0
      },
      "id": "src"
    },
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 0.0,
        "y": 80.0
      },
      "id": "t0"
    },
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 144.0,
        "y": 160.0
      },
      "id": "t1"
    },
    {
      "frame": {
        "height": 40.0,
        "width": 120.0,
        "x": 288.0,
        "y": 80.0
      },
      "id": "t2"
    }
  ]
}
